--- a/koa-demo/package.json
+++ b/koa-demo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-demo",
   "version": "1.0.0",
-  "description": "koa-deno",
+  "description": "koa-demo",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
